--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<html>
 <head>
 
 <link rel="stylesheet" href="styles.css">
@@ -7,11 +8,17 @@
 <body>
 <header>ALURAFLIX</header>
 
+<section>
 <div>
-<h1>ATRAVES DO ARANHAVERSO SUPERA O PRIMEIRO FILME?</h1>
+<h1>ATRAVÉS DO ARANHAVERSO SUPERA O PRIMEIRO FILME?</h1>
 <p>#homem-aranha</p>
 </div>
 
 <div>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/Ga8ZkXpfXN8?si=G1sYozqbX9TC5Ov_&quot; title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+</div>
+</section>
+
 </body>
+
+</html>
